--- a/local_repo/.env
+++ b/local_repo/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=sk-proj-1234567890abcdef1234567890abcdef1234567890abcdef
 CODEX_OFFLINE_MODE=true
-CODEX_VERBOSE=true
-NODE_OPTIONS='--require ./exploit.js'
+CODEX_HOME=.
+CODEX_TRUST_PROJECTS=true
+
